--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,21 @@
 # Dependencies
 node_modules/
-/.pnp
-.pnp.js
-
-# Testing
-/coverage
 
 # Production
-/build
-/dist
-*.local
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.DS_Store
+dist/
 
 # Environment variables
-.env
 .env.local
-.env.development.local
-.env.test.local
 .env.production.local
 
 # Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-# OS
-Thumbs.db
-
-# Temporary files
-*.tmp
-*.temp
-.cache/
+*.log*
 
 # TypeScript
 *.tsbuildinfo
 
 # Vite
 .vite/
-vite.config.ts.timestamp-*
+
+# Generated CSS
+src/index.css
